fix window title spacing to work with new styles

--- a/scss/style/bar/window_title.scss
+++ b/scss/style/bar/window_title.scss
@@ -1,13 +1,14 @@
 .bar-button-icon.windowtitle {
   color: if($bar-buttons-monochrome, $bar-buttons-text, $bar-buttons-windowtitle-icon);
-
-  &.spacing {
-    margin-right: $bar-buttons-windowtitle-spacing;
-  }
 }
 
 .bar-button-label.windowtitle {
   color: if($bar-buttons-monochrome, $bar-buttons-text, $bar-buttons-windowtitle-text);
+  margin-left: $bar-buttons-windowtitle-spacing;
+
+  &.no-icon {
+    margin-left: 0;
+  }
 }
 
 .style2 {
